changing step letters icon/coloring

--- a/src/sass/_availableBidders.scss
+++ b/src/sass/_availableBidders.scss
@@ -179,6 +179,9 @@
     .no-step-letters-icon {
       color: $color-gray-light;
     }
+    .one-step-letter-icon {
+      color: #f7b578
+    }
     .both-step-letters-icon {
       color: $color-red;
     }
