Correctly adding an 'x' close button to the employee profile report sweet alert

--- a/src/sass/_checklistModal.scss
+++ b/src/sass/_checklistModal.scss
@@ -32,6 +32,13 @@
     }
   }
 
+  .checklist-modal-x-button-container {
+    button {
+      float: right;
+      position: 'absolute';
+    }
+  }
+
   .title-divider {
     border-top: 1px solid $color-black;
   }
