--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -200,6 +200,7 @@ $feedback-z: 11000;
 $skill-code-dropdown-z: 10500;
 $back-to-top-z: 10200;
 $feedback-button-z: 10000;
+//Results Page joyride tutorial: 1000;
 $client-header-z: 100;
 $banner-toggle-z: 101;
 $spinner-z: 99;
