--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -205,6 +205,7 @@ $client-header-z: 100;
 $banner-toggle-z: 101;
 $spinner-z: 99;
 $bureau-spinner-z: 98;
+$daterange-z: 50;
 $autosuggest-suggestions-container-open-z: 20;
 $ribbon-z: 10;
 $toggle-button-z: 5;
