--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -34,6 +34,10 @@
     align-self: center;
   }
 
+  .sophie {
+    color: pink;
+  }
+
   .maintenance-container-left {
     background-color: $color-white;
     float: left;
