--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -37,6 +37,9 @@
   .sophie {
     color: pink;
   }
+  .elsa {
+    color: pink;
+  }
 
   .maintenance-container-left {
     background-color: $color-white;
