--- a/src/sass/_panelMeetingAgendas.scss
+++ b/src/sass/_panelMeetingAgendas.scss
@@ -246,4 +246,16 @@
     margin-left: 20px;
     font-family: 'Roboto';
   }
+
+  .panel-meeting-agendas-user-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-size: 1.4rem;
+    width: 500px;
+
+    .item {
+      width: 500px;
+    }
+  }
 }
