--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -229,6 +229,25 @@
     overflow-y: auto;
     padding: 0 10px 20px 0;
     width: 50%;
+    // max-width: 50%;
+    // .legs-form-container {
+    //   @media screen and (max-width: 1800px) {
+    //     color: grey;
+    //     max-width: 720px;
+    //   }
+    //   @media screen and (max-width: 1750px) {
+    //     color: green;
+    //     max-width: 720px;
+    //   }
+    //   @media screen and (max-width: 1700px) {
+    //     color: red;
+    //     max-width: 720px;
+    //   }
+    //   @media screen and (max-width: 1650px) {
+    //     color: blue;
+    //     max-width: 720px;
+    //   }
+    // }
 
     .tm-spinner-left-pane {
       left: 35%;
