--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -229,25 +229,37 @@
     overflow-y: auto;
     padding: 0 10px 20px 0;
     width: 50%;
-    // max-width: 50%;
-    // .legs-form-container {
-    //   @media screen and (max-width: 1800px) {
-    //     color: grey;
-    //     max-width: 720px;
-    //   }
-    //   @media screen and (max-width: 1750px) {
-    //     color: green;
-    //     max-width: 720px;
-    //   }
-    //   @media screen and (max-width: 1700px) {
-    //     color: red;
-    //     max-width: 720px;
-    //   }
-    //   @media screen and (max-width: 1650px) {
-    //     color: blue;
-    //     max-width: 720px;
-    //   }
-    // }
+    max-width: 50%;
+    .legs-form-container {
+      @media screen and (max-width: 2350px) {
+        color: orange;
+        max-width: 1025px;
+      }
+      @media screen and (max-width: 2250px) {
+        color: pink;
+        max-width: 975px;
+      }
+      @media screen and (max-width: 2150px) {
+        color: brown;
+        max-width: 925px;
+      }
+      @media screen and (max-width: 2050px) {
+        color: yellow;
+        max-width: 875px;
+      }
+      @media screen and (max-width: 1950px) {
+        color: grey;
+        max-width: 825px;
+      }
+      @media screen and (max-width: 1850px) {
+        color: green;
+        max-width: 775x;
+      }
+      @media screen and (max-width: 1750px) {
+        color: red;
+        max-width: 725px;
+      }
+    }
 
     .tm-spinner-left-pane {
       left: 35%;
