partially addressing tandem feedback, more work to be done

--- a/src/sass/_results.scss
+++ b/src/sass/_results.scss
@@ -864,6 +864,16 @@ $results-container-width: 100% - $filter-container-width;
       max-height: 50vh;
     }
   }
+
+  .tandem-filters {
+    overflow: auto;
+    max-height: 50vh;
+  }
+
+  .tandem-common-filters {
+    overflow: auto;
+    max-height: 25vh
+  }
 }
 
 .language-view-all {
