moving clear filters button

--- a/src/sass/_employeeSearch.scss
+++ b/src/sass/_employeeSearch.scss
@@ -45,6 +45,11 @@
       display: inline-block;
       margin-top: 10px;
     }
+
+    .inactive-toggle-clear-filters {
+      display: flex;
+      align-items: baseline;
+    }
   }
 
   .empl-search-filters {
